fix energy issue missing background bug in mobile safari
Former-commit-id: bba74e7bd5a0d536cca90c15dfe6511be48fca80

--- a/issues/energy/assets/custom.scss
+++ b/issues/energy/assets/custom.scss
@@ -57,6 +57,7 @@
       bottom: 0;
       margin: 0;
       max-height: initial;
+      background: none;
     }
 
     & > .content header {
@@ -98,7 +99,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 1;
 
       -webkit-transition: all 0.3s ease-out;
       -moz-transition: all 0.3s ease-out;
